# rms-tauri

./: .gitignore  1234.db.json  ARCHITECTURE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  bts.jsonc  docs.md  package.json  tsconfig.json  turbo.json
.github/workflows/: release.yml
apps/desktop/: package.json
apps/desktop/placeholder-dist/: index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/scripts/: compile-sidecar.ts
apps/server/src/: index.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: index.css  main.tsx
apps/web/src/components/: sign-in-form.tsx  sign-up-form.tsx  theme-provider.tsx  user-menu.tsx
apps/web/src/components/ui/: label.tsx
apps/web/src/lib/: auth-client.ts
apps/web/src/routes/: __root.tsx  dashboard.tsx  index.tsx  login.tsx
scripts/: fill-random-scores.sh  json-to-sqlite-schema.ts  schema.sql
