[package]
name = "desktop"
version = "0.1.0"
description = "RMS desktop launcher"
authors = ["rms-local"]
edition = "2021"

[package.metadata]
tauri-build = { build = "build.rs" }

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
rand = "0.8.5"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-shell = "2.3.3"
